kubernetes/auth/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-auth
  labels:
    app: app-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-auth
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-auth
    spec:
      containers:
        - name: app-auth
          image: ghcr.io/drobyshevalex/app-auth:1.0.0
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: app-auth
  labels:
    app: app-auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: app-auth
