kubernetes/auth/auth.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-auth
  labels:
    app: app-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-auth
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-auth
    spec:
      containers:
        - name: app-auth
          image: ghcr.io/drobyshevalex/app-auth:latest
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: app-auth
  labels:
    app: app-auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: app-auth
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  hosts:
    - "*"
  gateways:
    - auth-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: app-auth
      retries:
        attempts: 0
